--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
       .intro h1:before {
         /* Edit this with your name or anything else */
-        content: 'KESTLER';
+        content: 'FOSTER';
       }
     </style>
   </head>
@@ -30,7 +30,7 @@
           <nav id="navbar-1" class="navbar item-nav">
             <ul>
               <li class="active">
-                <a href="#about">About</a>
+                <a href="#about">Acerca de mí</a>
               </li>
               <li>
                 <a href="#experiences">Experiences</a>
@@ -50,10 +50,10 @@
     <!-- Introduction -->
     <div class="intro section" id="about">
       <div class="container">
-        <p>"Do or do not. There is no try."</p>
+        <p>"MCLARENNN"</p>
         <div class="units-row units-split wrap">
           <div class="unit-20">
-            <img src="img/ava.jpg" alt="Avatar">
+            <img src="https://play-lh.googleusercontent.com/3HNkjUWd8da0vzzHSDhF3yYqk_TfTOeAxNi4RxsFm7jVStO1PuFITegQbElOh8b908w" alt="Avatar">
           </div>
           <div class="unit-80">
             <h1>I live in<br><span id="typed"></span></h1>
