i change my achievements

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			</ul>
 			<ul class="award-list list-flat">
 				<li>Junio 2022</li>
-				<li>Termino el primer año de robotica</li>
+				<li>Termino el primer año de prepa</li>
 				
 			</ul>
 		</div>
